--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5001
-MONGODB_URI=mongodb+srv://cesar:0000@cluster0.b5xx37w.mongodb.net/ASESORIASACADEMICASIUDIGITAL?retryWrites=true&w=majority
+MONGODB_URI='mongodb://inventarios-database:27017/inventarios'
+##mongodb+srv://cesar:0000@cluster0.b5xx37w.mongodb.net/ASESORIASACADEMICASIUDIGITAL?retryWrites=true&w=majority
