--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-PORT=5001
-MONGODB_URI='mongodb://inventarios-database:27017/inventarios'
+PORT=4000
+MONGODB_URI=mongodb+srv://cesar:0000@cluster0.b5xx37w.mongodb.net/ASESORIASACADEMICASIUDIGITAL?retryWrites=true&w=majority
 ##mongodb+srv://cesar:0000@cluster0.b5xx37w.mongodb.net/ASESORIASACADEMICASIUDIGITAL?retryWrites=true&w=majority
+##mongodb://inventarios-database:27017/inventarios
