--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
-  microservicio1: #microservicio1
-    container_name: microservicio1
+  microservicio1-cesar: #microservicio1
+    container_name: microservicio1-cesar
     image: cesarmoralesh/asesorias-micro2:v1
     build: 
       context: .
@@ -12,8 +12,8 @@ services:
     environment:
       CONTAINET_HOST: microservicio1  
  ###
-  microservicio2: #microservicio2
-    container_name: microservicio2
+  microservicio2-cesar: #microservicio2
+    container_name: microservicio2-cesar
     image: cesarmoralesh/asesorias-micro2:v1
     build: 
       context: .
@@ -24,8 +24,8 @@ services:
     environment:
       CONTAINET_HOST: microservicio2  
   ###
-  microservicio3: #microservicio3
-    container_name: microservicio3
+  microservicio3-cesar: #microservicio3
+    container_name: microservicio3-cesar
     image: cesarmoralesh/asesorias-micro2:v1
     build: 
       context: .
@@ -35,9 +35,9 @@ services:
       - asesorias-red
     environment:
       CONTAINET_HOST: microservicio3
-  load-balancer: #load balancer
-    container_name: load-balancer
-    image: load-balancer:v1
+  load-balancer-cesar: #load balancer
+    container_name: load-balancer-cesar
+    image: load-balancer-cesar:v1
     build: 
       context: ./load-balancer
     ports:
@@ -45,9 +45,9 @@ services:
     networks:
       - asesorias-red 
     depends_on:
-      - microservicio1
-      - microservicio2
-      - microservicio3
+      - microservicio1-cesar
+      - microservicio2-cesar
+      - microservicio3-cesar
     restart: always 
 
 networks: 
