--- a/load-balancer/conf/nginx.conf
+++ b/load-balancer/conf/nginx.conf
@@ -1,7 +1,7 @@
 upstream backend {
-    server microservicio1-cesar:4000;
-    server microservicio2-cesar:4000;
-    server microservicio3-cesar:4000;
+    server microservicio1-cesarm:4000;
+    server microservicio2-cesarm:4000;
+    server microservicio3-cesarm:4000;
 }
     
 server {
